# resumemaster

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: operations.md
examples/pablo_cartes/: README.md  generate_cv.py  resume_data.json
resumemaster/: __init__.py  cli.py  extractor.py  identifier.py  models.py  validator.py
resumemaster/generator/: __init__.py  base.py  pymupdf_gen.py  weasyprint_gen.py
resumemaster/generator/templates/: resume.html.j2
tests/: conftest.py  test_extractor.py  test_generator.py  test_identifier.py  test_models.py  test_validator.py
